Basic functionality complete, next step is to fix repeated calculations and using last result as terms[0]

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 
 <body>
   <div class="main">
-    <div class="screenDiv" id="outputField">
+    <div class="screenDiv" id="upperField">
 
-        <span class="screenText" id="result">1337</span>
+        <span class="screenText" id="upperText"></span>
 
     </div>
-    <div class="screenDiv" id="inputField">
+    <div class="screenDiv" id="lowerField" >
 
-        <span class="screenText" id="input">1337</span>
+        <span class="screenText" id="lowerText"></span>
 
     </div>
     <div class="numpad">
@@ -32,7 +32,7 @@
       <div class="numButton button">7</div>
       <div class="numButton button">8</div>
       <div class="numButton button">9</div>
-      <div class="operatorButton button"> &times;</div>
+      <div class="operatorButton button">&times;</div>
       <div class="numButton button">4</div>
       <div class="numButton button">5</div>
       <div class="numButton button">6</div>
