Starting over with the logic

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
     </div>
     <div class="numpad">
-      <div class="numButton button">C</div>
-      <div class="numButton button">+/-</div>
-      <div class="numButton button">%</div>
+      <div class="miscButton button" id="clear">C</div>
+      <div class="miscButton button" id="plusMinus">+/-</div>
+      <div class="miscButton button" id="percentage">%</div>
       <div class="operatorButton button">&div;</div>
       <div class="numButton button">7</div>
       <div class="numButton button">8</div>
@@ -43,11 +43,11 @@
       <div class="operatorButton button">+</div>
       <div class="numButton button" id="">0</div>
       <div class="empty"></div>
-      <div class="numButton button" id="comma">,</div>
-      <div class="operatorButton button" id="equal">=</div>
+      <div class="miscButton button" >,</div>
+      <div class="miscButton button" id='equal'>=</div>
     </div>
   </div>
-  <script src="calculator.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
